z-index for search/filter on changelist, fixed #83

--- a/grappelli/static/grappelli/css/components.css
+++ b/grappelli/static/grappelli/css/components.css
@@ -565,7 +565,7 @@ ul.actions li a {
 .module.filter {
     position: relative;
     float: right;
-    z-index: 990;
+    z-index: 1001;
     padding: 8px 10px;
 }
 .module.filter + .module.search {
